scrool fixed
Horizontal scrolling due to the 100was fixed

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ html{
 body {
   height: 100vh;
   line-height: 1;
-  width: 100vw;
+/*   width: 100vw; */
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
